automaguard-go/include/aegis.h

#ifndef AEGIS_FFI_H
#define AEGIS_FFI_H

/* THIS FILE IS AUTO-GENERATED BY cbindgen. DO NOT EDIT. */

#include <stdarg.h>
#include <stdbool.h>
#include <stdint.h>
#include <stdlib.h>

// Opaque handle to a loaded AutomaGuard policy engine.
//
// Allocate with [`aegis_engine_from_file`] or [`aegis_engine_from_bytes`].
// Free with [`aegis_engine_free`]. Must not be shared across threads without
// external synchronisation.
struct AegisEngine;

// Load a compiled policy from a `.aegisc` file.
//
// Returns a non-null `AegisEngine*` on success, or `NULL` on error.
// On error call [`aegis_last_error`] for a description.
//
// The caller is responsible for freeing the returned pointer with
// [`aegis_engine_free`].
//
// # Safety
//
// `path` must be a valid, non-null, null-terminated UTF-8 string.
struct AegisEngine *aegis_engine_from_file(const char *path);

// Load a compiled policy from an in-memory `.aegisc` buffer.
//
// Returns a non-null `AegisEngine*` on success, or `NULL` on error.
// On error call [`aegis_last_error`] for a description.
//
// The caller is responsible for freeing the returned pointer with
// [`aegis_engine_free`].
//
// # Safety
//
// `data` must be a valid non-null pointer to at least `len` bytes.
struct AegisEngine *aegis_engine_from_bytes(const unsigned char *data, uintptr_t len);

// Evaluate a single agent event against the loaded policy.
//
// - `engine`     — a non-null engine handle.
// - `event_type` — null-terminated UTF-8 event type string (e.g. `"tool_call"`).
// - `fields_json` — null-terminated UTF-8 JSON object of field name → value
//   pairs, or `NULL` for an empty field set.
//
// Returns a heap-allocated, null-terminated UTF-8 JSON string containing the
// `PolicyResult` (see crate-level documentation for the schema). The caller
// must free this string with [`aegis_result_free`].
//
// Returns `NULL` on error; call [`aegis_last_error`] for a description.
//
// # Safety
//
// All pointer arguments must satisfy the constraints described above.
char *aegis_engine_evaluate(struct AegisEngine *engine,
                            const char *event_type,
                            const char *fields_json);

// Free a result string returned by [`aegis_engine_evaluate`].
//
// Passing `NULL` is a no-op.
//
// # Safety
//
// `result` must have been returned by [`aegis_engine_evaluate`] and must not
// have been freed before.
void aegis_result_free(char *result);

// Free an engine handle returned by [`aegis_engine_from_file`] or
// [`aegis_engine_from_bytes`].
//
// Passing `NULL` is a no-op.
//
// # Safety
//
// `engine` must have been returned by one of the construction functions and
// must not have been freed before.
void aegis_engine_free(struct AegisEngine *engine);

// Return the last error message on this thread, or `NULL` if the last call
// succeeded.
//
// The returned pointer is valid until the next FFI call on this thread.
// Do not free it.
const char *aegis_last_error(void);

#endif  /* AEGIS_FFI_H */